--- a/experiment/simulation/statechart.html
+++ b/experiment/simulation/statechart.html
@@ -1,7 +1,7 @@
 <!-- Redeveloped
 Lab: Software Engineering
-Exp:Identifying Domain Classes from the Problem Statements
-File Name: domainclass.html
+Exp: Statechart and Activity Modeling
+File Name: statechart.html
 Author: Prakriti Dhang
 -->
 
