--- a/experiment/simulation/statechart.html
+++ b/experiment/simulation/statechart.html
@@ -29,7 +29,7 @@ Author: Prakriti Dhang
         <img src="images/vlabs-logo.png" class=" rounded img-fluid" alt="vlabs-logo" >
       </div>
       <div class="col-md-8 p-4">
-        <p class="display-5 fw-bold text-primary text-center"> Virtual Lab IIT Kharagpur</p>
+        <p class="h2 fw-bold text-primary text-center"> Virtual Lab IIT Kharagpur</p>
       </div>
       <div class="col-md-2">
         <img src="images/iitkgp-logo.png" class=" rounded img-fluid" alt="iitkgplogo" >
