--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
+
 <!-- <style>
 body {font-family: Arial;}
 
@@ -46,34 +47,34 @@ body,html,.main-display-area,.col-md-12 {
   border-top: none;
 }
 </style> -->
+
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
 </head>
 <body class="p-3 m-2">
 
 <div class="container-fluid p-3">
-<div class="tab">
-  <button type="button" class="btn btn-primary btn-lg" onclick="openstatechrt(event, 'p1')" id="defaultOpen">Simulation</button>
-  <button type="button" class="btn btn-primary btn-lg"  onclick="openstatechrt(event, 'p2')" >Exercises</button><!--class="tablinks" onclick="openstatechrt(event, 'p2')"-->
+<div class="text-center">
+  
+  
+  <button type="button" class="btn btn-info btn-lg border border-2 border-primary p-3" onclick="openstatechrt(event, 'p1')" id="defaultOpen">Simulation</button>
+  <button type="button" class="btn btn-info btn-lg border border-2 border-primary p-3"  onclick="openstatechrt(event, 'p2')" >Exercises</button><!--class="tablinks" onclick="openstatechrt(event, 'p2')"-->
   
 </div>
+<br>
 
-<div id="p1" class="tabcontent ratio ratio-1x1 " >
+<div id="p1" class="tabcontent ratio ratio-16x9">
   
- 						      <iframe  id="heat" class="iframe" title="heatexch" height="100%" width="100%" src="simulation.html">
+ 						      <iframe   title="heatexch"  class="responsive-iframe border border-1 border-primary" height ="100%" width="100%"   src="simulation.html" >
 							  </iframe>
                                 
 </div>
 
-<div id="p2" class="tabcontent ratio ratio-1x1 ">
+<div id="p2" class="tabcontent ratio ratio-16x9">
   
   
- 						      <iframe id="heat"
-								title="heatexch"
-                class="iframe"
-								width="100%"
-								height="100%"
-								src="statechart.html">
+ 						      <iframe class="responsive-iframe border border-1 border-primary" title="heatexch"  width="100%" height="100%" src="statechart.html" >
 							  </iframe>
                              
 </div>
@@ -99,6 +100,9 @@ function openstatechrt(evt, btnName) {
 
 document.getElementById("defaultOpen").click();
 </script>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html> 
