activity diagram updated

--- a/experiment/simulation/statechart.html
+++ b/experiment/simulation/statechart.html
@@ -460,7 +460,9 @@ Author: Prakriti Dhang
       
 
     </thead>
-   
+   <tbody id="tbodyt23">
+
+   </tbody>
 
   </table>
  </div> <!-- table 3 responsive div ended for exercise 2-->
@@ -596,7 +598,7 @@ Author: Prakriti Dhang
   <th>Merge to Activities</th>
   <th>Remove</th>
 </thead>
-<tbody>
+<tbody id="tbodyt25">
   
 </tbody>
 
