--- a/experiment/simulation/statechart.html
+++ b/experiment/simulation/statechart.html
@@ -385,7 +385,7 @@ Author: Prakriti Dhang
 
 <!------------------------------------------Exercise 2 -------------------------------------------->
 
-<div class="card border border-2 border-success p-2" id="ex2" style="display:block;">
+<div class="card border border-2 border-success p-2" id="ex2" style="display:none;">
   <div class="card-body">
     <div class="row">
     <div class="col-md-12" >
