--- a/experiment/simulation/statechart-activity.html
+++ b/experiment/simulation/statechart-activity.html
@@ -57,8 +57,8 @@ Author: Prakriti Dhang
 	<label class="form-label fw-bold fs-5">Select a problem from the dropdown list shown below</label>
    <select id="selectex" class="form-select float-center border border-2 border-primary" aria-label="Default select example" onchange="subex()">
   <option value="0" selected>Exercise #</option>
-  <option value="1">1</option>
-  <option value="2">2</option>
+  <option value="1">State Chart Diagram</option>
+  <option value="2">Activity Diagram</option>
   
 </select>
 <br>
