--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -218,7 +218,7 @@ Author: Prakriti Dhang -->
             </div>
             <hr>
             
-            <a class="btn btn-success fs-4" target="_blank" href="./statechart.html" role="button" >Click Here to Go to Exercise Page</a>
+            <a class="btn btn-success fs-4" target="_blank" href="./statechart-activity.html" role="button" >Click Here to Go to Exercise Page</a>
            
         </div>
             </div>
