activity diagram modified

--- a/experiment/simulation/statechart-activity.html
+++ b/experiment/simulation/statechart-activity.html
@@ -777,7 +777,7 @@ Author: Prakriti Dhang
 
 <button id="drawbtn" class="btn btn-primary" type="button" onclick="drawbtex2()" ><i class="bi bi-pencil-fill"></i>Draw</button></td>
 </form>
-<div id="stchart_diag_ex2">
+<div id="activity_diag_ex2">
 
 </div>
 
