--- a/experiment/simulation/statechart-activity.html
+++ b/experiment/simulation/statechart-activity.html
@@ -800,7 +800,7 @@ Author: Prakriti Dhang
  
 </div> 
 <div style="font-size: medium;" id="show_result2"  style=" display: none;" >
-  <img class="img-fluid" src="" slt="solution 2">
+  <img class="img-fluid" src="./images/solution2.png" slt="solution 2">
 
 </div> 
 <br>
